[gd_scene load_steps=15 format=3 uid="uid://wxeipnqylypa"]

[ext_resource type="PackedScene" uid="uid://bc7msraepqfum" path="res://effects/stage_background.tscn" id="1_hhp03"]
[ext_resource type="Script" path="res://stage_selector.gd" id="1_pkf56"]
[ext_resource type="Texture2D" path="res://Level Selector-20241027T133937Z-001/Level Selector/Snake.png" id="2_n2n1d"]
[ext_resource type="Texture2D" path="res://Level Selector-20241027T133937Z-001/Level Selector/StarBlank.png" id="3_aqibx"]
[ext_resource type="Texture2D" path="res://Level Selector-20241027T133937Z-001/Level Selector/Star1.png" id="4_bbee3"]
[ext_resource type="Script" path="res://snake_stage.gd" id="4_lvdo2"]
[ext_resource type="Texture2D" path="res://Level Selector-20241027T133937Z-001/Level Selector/Star2.png" id="5_8v60s"]
[ext_resource type="Texture2D" path="res://Level Selector-20241027T133937Z-001/Level Selector/Star3.png" id="6_sa3do"]
[ext_resource type="Texture2D" path="res://Level Selector-20241027T133937Z-001/Level Selector/Cloud.png" id="7_xyev8"]
[ext_resource type="Texture2D" path="res://Level Selector-20241027T133937Z-001/Level Selector/Dragon.png" id="8_tilm1"]
[ext_resource type="Texture2D" path="res://Level Selector-20241027T133937Z-001/Level Selector/Bunny.png" id="9_g05ef"]
[ext_resource type="Texture2D" path="res://Level Selector-20241027T133937Z-001/Level Selector/Tiger.png" id="10_7pv7l"]
[ext_resource type="Texture2D" path="res://Level Selector-20241027T133937Z-001/Level Selector/Cow.png" id="11_qg4r4"]
[ext_resource type="Texture2D" path="res://Level Selector-20241027T133937Z-001/Level Selector/Rat.png" id="12_khhfq"]

[node name="StageSelector" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pkf56")

[node name="level_select_background" parent="." instance=ExtResource("1_hhp03")]

[node name="SnakeStage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 104.0
offset_top = 576.0
offset_right = 470.0
offset_bottom = 942.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n2n1d")
expand_mode = 1
script = ExtResource("4_lvdo2")

[node name="BlankStar" type="TextureRect" parent="SnakeStage"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -340.0
offset_right = 233.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_aqibx")
expand_mode = 1

[node name="Star1" type="TextureRect" parent="SnakeStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bbee3")
expand_mode = 1

[node name="Star2" type="TextureRect" parent="SnakeStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -222.0
offset_right = 222.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8v60s")
expand_mode = 1

[node name="Star3" type="TextureRect" parent="SnakeStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -224.0
offset_right = 230.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_sa3do")
expand_mode = 1

[node name="Fog1" type="TextureRect" parent="SnakeStage"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -229.0
offset_right = 229.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_xyev8")
expand_mode = 1

[node name="DragonStage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 288.0
offset_top = 169.0
offset_right = 654.0
offset_bottom = 535.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_tilm1")
expand_mode = 1

[node name="BlankStar" type="TextureRect" parent="DragonStage"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -340.0
offset_right = 233.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_aqibx")
expand_mode = 1

[node name="Star1" type="TextureRect" parent="DragonStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bbee3")
expand_mode = 1

[node name="Star2" type="TextureRect" parent="DragonStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -222.0
offset_right = 222.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8v60s")
expand_mode = 1

[node name="Star3" type="TextureRect" parent="DragonStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -224.0
offset_right = 230.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_sa3do")
expand_mode = 1

[node name="Fog1" type="TextureRect" parent="DragonStage"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -229.0
offset_right = 229.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_xyev8")
expand_mode = 1

[node name="RabbitStage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 768.0
offset_top = 37.0
offset_right = 1134.0
offset_bottom = 403.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_g05ef")
expand_mode = 1

[node name="BlankStar" type="TextureRect" parent="RabbitStage"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -340.0
offset_right = 233.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_aqibx")
expand_mode = 1

[node name="Star1" type="TextureRect" parent="RabbitStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bbee3")
expand_mode = 1

[node name="Star2" type="TextureRect" parent="RabbitStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -222.0
offset_right = 222.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8v60s")
expand_mode = 1

[node name="Star3" type="TextureRect" parent="RabbitStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -224.0
offset_right = 230.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_sa3do")
expand_mode = 1

[node name="Fog1" type="TextureRect" parent="RabbitStage"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -229.0
offset_right = 229.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_xyev8")
expand_mode = 1

[node name="TigerStage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1224.0
offset_top = 169.0
offset_right = 1590.0
offset_bottom = 535.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_7pv7l")
expand_mode = 1

[node name="BlankStar" type="TextureRect" parent="TigerStage"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -340.0
offset_right = 233.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_aqibx")
expand_mode = 1

[node name="Star1" type="TextureRect" parent="TigerStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bbee3")
expand_mode = 1

[node name="Star2" type="TextureRect" parent="TigerStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -222.0
offset_right = 222.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8v60s")
expand_mode = 1

[node name="Star3" type="TextureRect" parent="TigerStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -224.0
offset_right = 230.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_sa3do")
expand_mode = 1

[node name="Fog1" type="TextureRect" parent="TigerStage"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -229.0
offset_right = 229.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_xyev8")
expand_mode = 1

[node name="CowStage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1448.0
offset_top = 576.0
offset_right = 1814.0
offset_bottom = 942.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_qg4r4")
expand_mode = 1

[node name="BlankStar" type="TextureRect" parent="CowStage"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -340.0
offset_right = 233.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_aqibx")
expand_mode = 1

[node name="Star1" type="TextureRect" parent="CowStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bbee3")
expand_mode = 1

[node name="Star2" type="TextureRect" parent="CowStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -222.0
offset_right = 222.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8v60s")
expand_mode = 1

[node name="Star3" type="TextureRect" parent="CowStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -224.0
offset_right = 230.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_sa3do")
expand_mode = 1

[node name="Fog1" type="TextureRect" parent="CowStage"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -229.0
offset_right = 229.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_xyev8")
expand_mode = 1

[node name="RatStage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 664.0
offset_top = 446.0
offset_right = 1240.0
offset_bottom = 1022.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_khhfq")
expand_mode = 1

[node name="BlankStar" type="TextureRect" parent="RatStage"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -340.0
offset_right = 233.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("7_xyev8")
expand_mode = 1

[node name="Star1" type="TextureRect" parent="RatStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bbee3")
expand_mode = 1

[node name="Star2" type="TextureRect" parent="RatStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -222.0
offset_right = 222.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8v60s")
expand_mode = 1

[node name="Star3" type="TextureRect" parent="RatStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -224.0
offset_right = 230.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_sa3do")
expand_mode = 1

[node name="Fog1" type="TextureRect" parent="RatStage"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -368.0
offset_right = 368.0
offset_bottom = 368.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_xyev8")
expand_mode = 1

[connection signal="mouse_entered" from="SnakeStage" to="SnakeStage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SnakeStage" to="SnakeStage" method="_on_mouse_exited"]
